infrastructure/database/maindb.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: maindb
#spec:
#  ports:
#    - protocol: TCP
#      port: 3306
#  selector:
#    app: mysql
#  type: LoadBalancer
  # loadBalancerIP:
apiVersion: v1
kind: Service
metadata:
  name: maindb
spec:
  type: NodePort
  ports:
    - name: maindb-port
      port: 3306
      nodePort: 30001
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.35
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
