infrastructure/database/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maindb-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: maindb
      port:
        number: 3306
